vlib/v/checker/tests/enum_op_err.vv
enum Color {
	red
	blue
	green
}

fn main() {
	println(Color.red > Color.green)
	println(Color.red + Color.green)
	println(Color.red && Color.green)
	println(Color.red | Color.green)
	println(Color.red & Color.green)
}
